--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -6,6 +6,7 @@
   box-shadow:0 14px 20px 0 rgba(0,0,0,0.2),0 10px 24px 0 rgba(0,0,0,0.19) !important;
 }
 
+.span-120 { width: 120% !important }
 .span-200 { width: 200% !important }
 
 tr:nth-child(even) {
