--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -9,6 +9,7 @@
 .span-120 { width: 120% !important }
 .span-200 { width: 200% !important }
 
+.right-50 { right: -50 }
 .right-200 { right: -200px }
 
 tr:nth-child(even) {
