--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -9,8 +9,8 @@
 .span-120 { width: 120% !important }
 .span-200 { width: 200% !important }
 
-.right-50 { right: -50px }
-.right-200 { right: -200px }
+.right-50 { right: -50px !important }
+.right-200 { right: -200px !important }
 
 tr:nth-child(even) {
   background-color: #dbdbdb;
