--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -11,6 +11,13 @@
 
 .right-200 { right: -50px !important }
 
+.right- {
+  float: right;
+  z-index: -10;
+  width: 50%;
+  text-align: right;
+}
+
 tr:nth-child(even) {
   background-color: #dbdbdb;
 }
