--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -9,6 +9,8 @@
 .span-120 { width: 120% !important }
 .span-200 { width: 200% !important }
 
+.move-right-50 { right: -50px !important }
+
 tr:nth-child(even) {
   background-color: #dbdbdb;
 }
